--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,6 @@ android {
 }
 
 dependencies {
-  implementation "com.android.support:appcompat-v7:$supportVersion"
+  implementation 'androidx.appcompat:appcompat:1.3.1'
   implementation project(':payment')
 }
