--- a/payment/build.gradle
+++ b/payment/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-  implementation "com.android.support:appcompat-v7:$supportVersion"
+  implementation 'androidx.appcompat:appcompat:1.3.1'
 }
 
 group = 'uz.paycom'
