--- a/payment/build.gradle
+++ b/payment/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-  implementation 'androidx.appcompat:appcompat:1.3.1'
+  implementation 'androidx.appcompat:appcompat:1.4.0'
 }
 
 group = 'uz.paycom'
@@ -60,17 +60,18 @@ task sourcesJar(type: Jar) {
   classifier = 'sources'
 }
 
-task javadoc(type: Javadoc) {
+/*task javadoc(type: Javadoc) {
   source = android.sourceSets.main.java.srcDirs
   classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
+}*/
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+/*task javadocJar(type: Jar, dependsOn: javadoc) {
   classifier = 'javadoc'
   from javadoc.destinationDir
-}
+}*/
 
+/*
 artifacts {
   archives javadocJar
   archives sourcesJar
-}
+}*/
