--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,9 @@ android {
       debuggable true
     }
     release {
-      minifyEnabled true
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-      signingConfig signingConfigs.release
+//      minifyEnabled true
+//      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//      signingConfig signingConfigs.release
     }
   }
 }
