--- a/payment/build.gradle
+++ b/payment/build.gradle
@@ -24,8 +24,8 @@ android {
       debuggable true
     }
     release {
-      minifyEnabled true
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-payment.pro'
+      /*minifyEnabled true
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-payment.pro'*/
     }
   }
 }
@@ -60,18 +60,17 @@ task sourcesJar(type: Jar) {
   classifier = 'sources'
 }
 
-/*task javadoc(type: Javadoc) {
+task javadoc(type: Javadoc) {
   source = android.sourceSets.main.java.srcDirs
   classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}*/
+}
 
-/*task javadocJar(type: Jar, dependsOn: javadoc) {
+task javadocJar(type: Jar, dependsOn: javadoc) {
   classifier = 'javadoc'
   from javadoc.destinationDir
-}*/
+}
 
-/*
 artifacts {
   archives javadocJar
   archives sourcesJar
-}*/
+}
