--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
       debuggable true
     }
     release {
-//      minifyEnabled true
+      minifyEnabled false
 //      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //      signingConfig signingConfigs.release
     }
