--- a/payment/build.gradle
+++ b/payment/build.gradle
@@ -24,8 +24,8 @@ android {
       debuggable true
     }
     release {
-      /*minifyEnabled true
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-payment.pro'*/
+      minifyEnabled true
+     /* proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-payment.pro'*/
     }
   }
 }
